--- a/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
@@ -118,7 +118,7 @@
                                 <label asp-for="Perfil.JornadaTrabalhoSemanalPrevista.TempoTotal" class="col-sm-3 col-form-label"></label>
                                 <div class="col-sm-9">
                                     <div class="input-group">
-                                        <input asp-for="Perfil.JornadaTrabalhoSemanalPrevista.TempoTotal" class="form-control" disabled />
+                                        <input value="@String.Format(new TimeSpanFormatter(), "{0:hhh\\:mm}", Model.Perfil.JornadaTrabalhoSemanalPrevista.TempoTotal)" class="form-control" disabled />
                                         <button class="btn btn-outline-secondary" name="command" value="RecalcularTempoTotal">Recalcular</button>
                                     </div>
                                 </div>
