--- a/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Index.cshtml
@@ -158,7 +158,7 @@
                             @Html.DisplayFor(modelItem => item.JornadaTrabalhoSemanalPrevista.Semana[6].Tempo)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.JornadaTrabalhoSemanalPrevista.TempoTotal)
+                            @String.Format(new TimeSpanFormatter(), "{0:hhh\\:mm}", item.JornadaTrabalhoSemanalPrevista.TempoTotal)
                         </td>
                     </tr>
                 }
