--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
@@ -136,7 +136,7 @@
                                                     </div>
                                                     <div class="col-sm-12 col-md-9">
                                                         <div class="card-body">
-                                                            <dl class="row g-3 ApuracaoDiaria">
+                                                            <dl class="row g-3 ApuracaoDiaria" data-dia="@Model.Folha.ApuracaoMensal.Dias[i].Dia">
                                                                 <dt class="col-sm-7 col-lg-5 TempoPrevisto">
                                                                     @Html.DisplayNameFor(model => model.Folha.ApuracaoMensal.Dias[i].TempoPrevisto)
                                                                 </dt>
