--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -200,7 +200,7 @@
                     <div class="col">
                         <div class="card apuracaoSemanal @(apuracaoSemanal.TempoPeriodo.Atual ? "border border-secondary border-2" : "")">
                             <div class="card-header">
-                                Semana #@apuracaoSemanal.NumeroSemana
+                                Semana #@(apuracaoSemanal.NumeroSemana + 1)
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
