--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -196,17 +196,25 @@
             {
                 var apuracaoSemanal = Model.ApuracaoMensal.Semanas[semanaIndex];
 
-                <div class="row row-cols-8 row-col-md-8 g-1 mb-1">
+                <div class="row row-cols-1 row-cols-lg-8 g-1 mb-1">
                     <div class="col">
-                        <div class="card apuracaoSemanal @(apuracaoSemanal.TempoPeriodo.Atual ? "border border-secondary border-2" : "")">
+                        <div class="card apuracaoSemanal @(apuracaoSemanal.TempoPeriodo.Atual ? "text-bg-dark" : "text-bg-secondary")">
                             <div class="card-header">
-                                Semana #@(apuracaoSemanal.NumeroSemana + 1)
+                                Semana
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title d-flex justify-content-center lh-lg">
+                                    #@(apuracaoSemanal.NumeroSemana + 1)
+                                </h4>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <li class="list-group-item d-flex justify-content-between align-items-start @(apuracaoSemanal.TempoPeriodo.Atual ? "text-bg-dark" : "text-bg-secondary")">
                                     <div class="ms-2 me-auto">
-                                        <div class="fw-bold">
+                                        <div class="fw-bold d-none d-lg-inline">
                                             Ap.
+                                        </div>
+                                        <div class="fw-bold d-inline d-lg-none">
+                                            Apuração
                                         </div>
                                     </div>
                                     @if (apuracaoSemanal.TempoPeriodo.Futuro)
@@ -222,10 +230,13 @@
                                         </span>
                                     }
                                 </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <li class="list-group-item d-flex justify-content-between align-items-start @(apuracaoSemanal.TempoPeriodo.Atual ? "text-bg-dark" : "text-bg-secondary")">
                                     <div class="ms-2 me-auto">
-                                        <div class="fw-bold">
+                                        <div class="fw-bold d-none d-lg-inline">
                                             Dif.
+                                        </div>
+                                        <div class="fw-bold d-inline d-lg-none">
+                                            Diferença
                                         </div>
                                     </div>
                                     @if (apuracaoSemanal.TempoPeriodo.Futuro)
@@ -251,7 +262,7 @@
 
                         if (diaIndex < (int)Model.ApuracaoMensal.PrimeiroDiaSemanaMes)
                         {
-                            <div class="col">
+                            <div class="col d-none d-lg-inline">
                             </div>
                         }
                         else if (diaIndex < Model.ApuracaoMensal.TotalDias + (int)Model.ApuracaoMensal.PrimeiroDiaSemanaMes)
@@ -259,7 +270,7 @@
                             var apuracaoDiaria = Model.ApuracaoMensal.Dias[diaIndex - (int)Model.ApuracaoMensal.PrimeiroDiaSemanaMes];
 
                             <div class="col">
-                                <div class="card apuracaoDiaria @(apuracaoDiaria.TempoPeriodo.Atual ? "border border-primary border-2" : "") @(apuracaoDiaria.TempoPrevisto == TimeSpan.Zero ? "text-bg-secondary" : "")" data-dia="@apuracaoDiaria.Dia">
+                                <div class="card apuracaoDiaria @(apuracaoDiaria.TempoPeriodo.Atual ? "border border-primary" : "") @(apuracaoDiaria.TempoPrevisto == TimeSpan.Zero ? "text-bg-secondary opacity-50" : "")" data-dia="@apuracaoDiaria.Dia">
                                     <div class="card-header">
                                         @apuracaoDiaria.DescricaoDia
                                     </div>
@@ -279,8 +290,11 @@
                                         <ol class="list-group list-group-flush">
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">
+                                                    <div class="fw-bold d-none d-lg-inline">
                                                         Ap.
+                                                    </div>
+                                                    <div class="fw-bold d-inline d-lg-none">
+                                                        Apuração
                                                     </div>
                                                 </div>
                                                 @if (apuracaoDiaria.TempoPeriodo.Futuro)
@@ -304,8 +318,11 @@
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                                 <div class="ms-2 me-auto">
-                                                    <div class="fw-bold">
+                                                    <div class="fw-bold d-none d-lg-inline">
                                                         Dif.
+                                                    </div>
+                                                    <div class="fw-bold d-inline d-lg-none">
+                                                        Diferença
                                                     </div>
                                                 </div>
                                                 @if (apuracaoDiaria.TempoPeriodo.Futuro)
@@ -356,6 +373,8 @@
                                     }
                                     @if (apuracaoDiaria.Pontos.Length > 0)
                                     {
+                                        <div class="card-header">
+                                        </div>
                                         <ul class="list-group list-group-flush">
                                             @foreach (var ponto in apuracaoDiaria.Pontos)
                                             {
@@ -411,7 +430,7 @@
                                                     }
                                                     @if (ponto.Observacao != null)
                                                     {
-                                                        <div class="oneline-comment">@ponto.Observacao</div>
+                                                        <div class="oneline-text">@ponto.Observacao</div>
                                                     }
                                                 </li>
                                             }
@@ -422,7 +441,7 @@
                         }
                         else
                         {
-                            <div class="col">
+                            <div class="col d-none d-lg-inline">
                             </div>
                         }
                     }
