--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -576,16 +576,161 @@ else
             </div>
         </div>
 
-        <div class="px-4 py-5 my-5 text-center border-top">
-            <img class="d-block mx-auto mb-4" src="~/img/cash-coin.svg" alt="" width="72" height="72">
-            <h1 class="display-5 fw-bold">Investimento zero</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Todos esses benefícios estão sendo oferecidos <b>gratuitamente</b>, mas exibimos um discreto anúncio fixado no rodapé da página como esse que você está vendo. No futuro pretendemos oferecer a <b>opção</b> de remover esse anúncio por um custo acessível. Então não se preocupe!</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <a class="btn btn-primary btn-lg px-4 gap-3" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Crie uma conta gratuita</a>
-                    <a class="btn btn-outline-secondary btn-lg px-4" href="mailto:mardsystems@gmail.com">Fale conosco</a>
+        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+            <symbol id="check" viewBox="0 0 16 16">
+                <title>Check</title>
+                <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+            </symbol>
+        </svg>
+
+        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-4 fw-normal text-body-emphasis">Preço</h1>
+            <p class="fs-5 text-body-secondary">Não deixe pra depois. Crie agora mesmo sua conta gratuitamente e troque de plano quando achar necessário.</p>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">
+                            Bronze
+                            <span class="badge rounded-pill" style="color: #cd7f32;">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star"></i>
+                                <i class="bi bi-star"></i>
+                            </span>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">R$ 0<small class="text-body-secondary fw-light">/mês</small></h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>1 perfil</li>
+                            <li>2 GB de armazenamento/ano</li>
+                            <li>Suporte por email</li>
+                            <li>Ajuda online</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Crie uma conta gratuita</button>
+                    </div>
                 </div>
             </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">
+                            Prata
+                            <span class="badge rounded-pill" style="color: #c0c0c0;">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star"></i>
+                            </span>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">R$ 1,99<small class="text-body-secondary fw-light">/mês</small></h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>Até 10 perfis</li>
+                            <li>10 GB de armazenamento/ano</li>
+                            <li>Suporte prioritário por email</li>
+                            <li>Ajuda online</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com">Fale conosco</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3 text-bg-primary border-primary">
+                        <h4 class="my-0 fw-normal">
+                            Ouro
+                            <span class="badge rounded-pill" style="color: #ffd700;">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </span>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">R$ 4,99<small class="text-body-secondary fw-light">/mês</small></h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>Perfis ilimitados</li>
+                            <li>20 GB de armazenamento/ano</li>
+                            <li>Suporte por telefone e email</li>
+                            <li>Ajuda online</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Em breve</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="display-6 text-center mb-4">Compare os planos</h2>
+
+        <div class="table-responsive">
+            <table class="table text-center">
+                <thead>
+                    <tr>
+                        <th style="width: 34%;"></th>
+                        <th style="width: 22%;">Bronze</th>
+                        <th style="width: 22%;">Prata</th>
+                        <th style="width: 22%;">Ouro</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row" class="text-start">Apuração de Folha</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">Backup de Comprovantes</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                </tbody>
+
+                <tbody>
+                    <tr>
+                        <th scope="row" class="text-start">Registro de Pontos</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">Cadastro de Perfis</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">Cadastro de Empregadores</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">Sem Anúncios</th>
+                        <td></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                </tbody>
+
+                <tbody class="opacity-50">
+                    <tr>
+                        <th scope="row" class="text-start">WebApp Offline (Em breve)</th>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">WebApp Online (Em breve)</th>
+                        <td></td>
+                        <td></td>
+                        <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 }
