refact: melhora a apresentação dos planos de assinatura

--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         switch (Trabalhadores.Trabalhador.Default.CustomerSubscription?.SubscriptionPlanId)
                         {
                             case Billing.SubscriptionPlanEnum.Bronze:
-                                <span class="badge text-bg-secondary rounded-pill" style="color: #cd7f32 !important;">
+                                <span class="badge rounded-pill" style="color: #cd7f32;">
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star"></i>
                                     <i class="bi bi-star"></i>
@@ -36,7 +36,7 @@
 
                                 break;
                             case Billing.SubscriptionPlanEnum.Silver:
-                                <span class="badge text-bg-secondary rounded-pill" style="color: #c0c0c0 !important;">
+                                <span class="badge rounded-pill" style="color: #c0c0c0;">
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star"></i>
@@ -44,7 +44,7 @@
 
                                 break;
                             case Billing.SubscriptionPlanEnum.Gold:
-                                <span class="badge text-bg-secondary rounded-pill" style="color: #ffd700 !important;">
+                                <span class="badge rounded-pill" style="color: #ffd700;">
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
                                     <i class="bi bi-star-fill"></i>
