--- a/src/MeuPonto.Web_App/Shared/LoginDisplay.razor
+++ b/src/MeuPonto.Web_App/Shared/LoginDisplay.razor
@@ -6,11 +6,11 @@
 
 <AuthorizeView>
     <Authorized>
-        Hello, @context.User.Identity?.Name!
-        <button class="nav-link btn btn-link" @onclick="BeginLogout">Log out</button>
+        Olá, @context.User.Identity?.Name!
+        <button class="nav-link btn btn-link" @onclick="BeginLogout">Sair</button>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <a href="app/authentication/login">Entrar</a>
     </NotAuthorized>
 </AuthorizeView>
 
@@ -18,6 +18,6 @@
     private async Task BeginLogout(MouseEventArgs args)
     {
         await SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
+        Navigation.NavigateTo("app/authentication/logout");
     }
 }
