--- a/src/MeuPonto.Web_App/Shared/NavMenu.razor
+++ b/src/MeuPonto.Web_App/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">MeuPonto</a>
+        <a class="navbar-brand" href="">Meu Ponto</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="app/fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="app/weather">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
     </nav>
