fix: ajusta material de marketing

--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -608,7 +608,7 @@ else
                             <li>Suporte por email</li>
                             <li>Ajuda online</li>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Crie uma conta gratuita</button>
+                        <a class="w-100 btn btn-lg btn-outline-primary" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Crie uma conta gratuita</a>
                     </div>
                 </div>
             </div>
@@ -632,7 +632,7 @@ else
                             <li>Suporte prioritário por email</li>
                             <li>Ajuda online</li>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com">Fale conosco</button>
+                        <a class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com?subject=Quero um Plano Prata" target="_blank">Fale conosco</a>
                     </div>
                 </div>
             </div>
@@ -656,7 +656,7 @@ else
                             <li>Suporte por telefone e email</li>
                             <li>Ajuda online</li>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Em breve</button>
+                        <a class="w-100 btn btn-lg btn-primary" href="mailto:mardsystems@gmail.com?subject=Quero um Plano Ouro" target="_blank" disabled>Em breve</a>
                     </div>
                 </div>
             </div>
@@ -718,13 +718,13 @@ else
 
                 <tbody class="opacity-50">
                     <tr>
-                        <th scope="row" class="text-start">WebApp Offline (Em breve)</th>
+                        <th scope="row" class="text-start">App Offline (Em breve)</th>
                         <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
                         <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
                         <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="text-start">WebApp Online (Em breve)</th>
+                        <th scope="row" class="text-start">App Online (Em breve)</th>
                         <td></td>
                         <td></td>
                         <td><svg class="bi" width="24" height="24"><use xlink:href="#check" /></svg></td>
